--- a/CraftingFilter/CraftingFilter.csproj
+++ b/CraftingFilter/CraftingFilter.csproj
@@ -1,19 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\valheim.targets" />
   <ItemGroup>
     <Reference Include="0Harmony20">
-      <HintPath>..\Libraries\BepInEx\core\0Harmony20.dll</HintPath>
-    </Reference>
-    <Reference Include="BepInEx.Harmony">
-      <HintPath>..\Libraries\BepInEx\core\BepInEx.Harmony.dll</HintPath>
-    </Reference>
-    <Reference Include="ui_lib">
-      <HintPath>..\Libraries\BepInEx\core\ui_lib.dll</HintPath>
+      <HintPath>D:\SteamLibrary\steamapps\common\Valheim\BepInEx\plugins\0Harmony20.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
